compiler/testData/diagnostics/testsWithStdLib/pcla/inconsistentTypeInference2.diag.txt
/inconsistentTypeInference2.kt:8:17: error: type mismatch: inferred type is String but Int was expected
        println(this.plus(1)[0])
                ^^^^

